--- a/School Administration Project/App.Config
+++ b/School Administration Project/App.Config
@@ -5,23 +5,26 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="School_DatabaseEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string='data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=&quot;C:\Users\ROBIN\Documents\Visual Studio 2015\Projects\WpfMetroTest\WpfMetroTest\School Database.mdf&quot;;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework'"
-      providerName="System.Data.EntityClient" />
-    <add name="School_Administration_Project.Properties.Settings.C__USERS_ROBIN_DOCUMENTS_VISUAL_STUDIO_2015_PROJECTS_WPFMETROTEST_WPFMETROTEST_SCHOOL_DATABASE_MDFConnectionString"
-      connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=&quot;C:\USERS\ROBIN\DOCUMENTS\VISUAL STUDIO 2015\PROJECTS\WPFMETROTEST\WPFMETROTEST\SCHOOL DATABASE.MDF&quot;;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True"
-      providerName="System.Data.SqlClient" />
-    <add name="School_Administration_Project.Properties.Settings.School_DatabaseConnectionString"
-      connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=&quot;C:\Users\ROBIN\Documents\Visual Studio 2015\Projects\WpfMetroTest\WpfMetroTest\School Database.mdf&quot;;Integrated Security=True;Connect Timeout=30"
-      providerName="System.Data.SqlClient" />
-    <add name="School_Administration_Project.Properties.Settings.School_DatabaseConnectionString1"
-      connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=&quot;|DataDirectory|\School Database.mdf&quot;;Integrated Security=True;Connect Timeout=30"
-      providerName="System.Data.SqlClient" />
-    <add name="School_Administration_Project.Properties.Settings.StudentDBConnectionString"
-      connectionString="Data Source=DESKTOP-5BN9EJ4\SQLEXPRESS;Initial Catalog=StudentDB;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
-    <add name="School_Administration_Project.Properties.Settings.StudentDBConnectionString1"
-      connectionString="Data Source=Al-Jabz\SQLEXPRESS;Initial Catalog=StudentDB;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+      <add name="School_DatabaseEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string='data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=&quot;C:\Users\ROBIN\Documents\Visual Studio 2015\Projects\WpfMetroTest\WpfMetroTest\School Database.mdf&quot;;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework'"
+          providerName="System.Data.EntityClient" />
+      <add name="School_Administration_Project.Properties.Settings.C__USERS_ROBIN_DOCUMENTS_VISUAL_STUDIO_2015_PROJECTS_WPFMETROTEST_WPFMETROTEST_SCHOOL_DATABASE_MDFConnectionString"
+          connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=&quot;C:\USERS\ROBIN\DOCUMENTS\VISUAL STUDIO 2015\PROJECTS\WPFMETROTEST\WPFMETROTEST\SCHOOL DATABASE.MDF&quot;;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True"
+          providerName="System.Data.SqlClient" />
+      <add name="School_Administration_Project.Properties.Settings.School_DatabaseConnectionString"
+          connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=&quot;C:\Users\ROBIN\Documents\Visual Studio 2015\Projects\WpfMetroTest\WpfMetroTest\School Database.mdf&quot;;Integrated Security=True;Connect Timeout=30"
+          providerName="System.Data.SqlClient" />
+      <add name="School_Administration_Project.Properties.Settings.School_DatabaseConnectionString1"
+          connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=&quot;|DataDirectory|\School Database.mdf&quot;;Integrated Security=True;Connect Timeout=30"
+          providerName="System.Data.SqlClient" />
+      <add name="School_Administration_Project.Properties.Settings.StudentDBConnectionString"
+          connectionString="Data Source=DESKTOP-5BN9EJ4\SQLEXPRESS;Initial Catalog=StudentDB;Integrated Security=True"
+          providerName="System.Data.SqlClient" />
+      <add name="School_Administration_Project.Properties.Settings.StudentDBConnectionString1"
+          connectionString="Data Source=Al-Jabz\SQLEXPRESS;Initial Catalog=StudentDB;Integrated Security=True"
+          providerName="System.Data.SqlClient" />
+      <add name="School_Administration_Project.Properties.Settings.StudentDBConnectionString2"
+          connectionString="Data Source=AL-JABZ\SQLEXPRESS;Initial Catalog=StudentDB;Integrated Security=True"
+          providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
